--- a/unibus/Cargo.toml
+++ b/unibus/Cargo.toml
@@ -6,15 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lapin = { version = "2.1.1" }
+actix = { version = "0.13.0"}
 tokio = { version = "1.21.2", features = ["full"]}
 tracing = "0.1.37"
 thiserror = "1.0.37"
-async-trait = "0.1.58"
-#actix = "0.13.0"
-#actix-rt = "2.7.0"
-#reactor-trait = "1.1.0"
-#executor-trait = "2.1.0"
+lapin = "2.1.1"
 tokio-reactor-trait = "1.1.0"
 tokio-executor-trait = "2.1.0"
-serde = { version = "1.0.147" }
